--- a/paginas/pesquisa/biologicas.html
+++ b/paginas/pesquisa/biologicas.html
@@ -1,16 +1,40 @@
-
-<div class="container text-center"> Pesquisa em Biológicas</div>
-<div class="col-9" text-justify recuo>
-    
-    <p id="Lorem">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsum voluptate perferendis architecto atque ullam explicabo voluptas vitae, laborum aspernatur nesciunt quasi minima omnis. Neque officia optio enim perspiciatis rem nobis dolorem magni id deleniti recusandae nulla ratione adipisci modi, ea exercitationem atque minus. Illo, laudantium nulla magnam nihil sint voluptate.</p>
-    <p id="Officiis">Officiis explicabo natus suscipit quis, quia fuga quisquam repudiandae, fugiat officia nostrum adipisci voluptas voluptatibus sapiente beatae exercitationem aspernatur veritatis. Unde eum modi iure fuga cumque cupiditate molestiae adipisci consequuntur, rerum cum ullam, nobis harum atque suscipit, magnam nisi quo id soluta asperiores eaque vitae sed laborum. Illum, aliquam impedit.</p>
-    <p id="Doloremque">Doloremque debitis qui, cum commodi voluptate quasi enim magni incidunt eligendi corporis quae laborum architecto? Molestias cumque tempore ea iure dignissimos atque. Laborum accusantium adipisci recusandae aliquid sit. Est soluta maiores non exercitationem labore illo officia ea explicabo voluptatem. Iusto rerum doloribus ex, earum perspiciatis quas? Eveniet id ex voluptatibus?</p>
-    <p id="Arduo">Arduo debitis qui, cum commodi voluptate quasi enim magni incidunt eligendi corporis quae laborum architecto? Molestias cumque tempore ea iure dignissimos atque. Laborum accusantium adipisci recusandae aliquid sit. Est soluta maiores non exercitationem labore illo officia ea explicabo voluptatem. Iusto rerum doloribus ex, earum perspiciatis quas? Eveniet id ex voluptatibus?</p>
-
-    <div class="col-3 text-end">
-        <p><a href="#Lorem">Lorem</a></p>
-        <p><a href="#Officiis">Officiis</a></p>
-        <p><a href="#Dolorequem">Doloremque</a></p>
-        <p><a href="#Arduo">Arduo</a></p>
-      </div>
+<div
+  class="container fw-bold text-center rounded-2 bg-success bg-gradient text-white my-2 py-2"
+>
+  Pesquisa Biológicas - IFMS
+</div>
+<div class="container">
+  <div class="row">
+    <div class="col-10 text-justify recuo">
+      <p id="lorem">
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolor nemo et
+        atque ea itaque repellat. Exercitationem quisquam, quae vel nemo
+        laudantium labore enim minus sit adipisci optio quam quia praesentium
+        ratione error, expedita atque quaerat hic! Laborum facere ullam
+        sapiente, itaque totam, placeat sint aperiam libero enim dolores esse
+        voluptate?
+      </p>
+      <p id="deserunt">
+        Deserunt, nam necessitatibus consequuntur aspernatur iusto odit.
+        Obcaecati mollitia quaerat ad nostrum architecto illo nesciunt, earum
+        aut et accusamus incidunt suscipit eaque provident qui blanditiis
+        accusantium officiis. Corrupti ipsam libero perspiciatis impedit, qui
+        sed, omnis dolorum saepe rem quibusdam, deserunt aperiam molestias enim
+        quisquam praesentium iure. Aut nam magnam facilis?
+      </p>
+      <p id="aspernatur">
+        Aspernatur repellat asperiores excepturi! Sit voluptatem iusto nihil
+        doloremque repudiandae facilis, porro quod assumenda. Dignissimos
+        sapiente voluptatem ex sint esse unde error repellendus recusandae
+        quisquam? Mollitia recusandae cum eum accusantium dolorem esse natus,
+        temporibus explicabo quod veniam, nobis alias modi dolores inventore
+        neque expedita, sunt placeat aperiam! Eum, neque facere.
+      </p>
+    </div>
+    <div class="col-2 text-end">
+      <p><a href="#lorem">Lorem</a></p>
+      <p><a href="#deserunt">Deserunt</a></p>
+      <p><a href="#aspernatur">Aspernatur</a></p>
+    </div>
+  </div>
 </div>
